# awtk

./: .gitignore  CMakeLists.txt  t.xml
demos/: assets.c  demo1_app.c  demo_animator_app.c  demo_desktop.c  demo_main.c  demo_thread_app.c  demo_tr_app.c  demo_ui_app.c  demo_vg_app.c  preview_ui.c
demos/assets/inc/styles/: default.data
demos/assets/inc/ui/: edit.data
demos/assets/raw/styles/: default.xml
demos/assets/raw/ui/: edit.xml
src/base/: input_method.c  line_break.c  text_edit.c  text_edit.h
src/ext_widgets/mledit/: mledit.c  mledit.h  text_edit.c  text_edit.h
src/tkc/: wstr.c
src/widgets/: edit.c  edit.h
tests/: text_edit_test.cc  wstr_test.cc
